[package]
name = "firin-bot-data-plane"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.99", default-features = false }
dotenvy = { version = "0.15.7", default-features = false }
env_logger = { version = "0.11.8", default-features = false, features = ["auto-color", "humantime"] }
futures-util = { version = "0.3.31", default-features = false }
log = { version = "0.4.27", default-features = false }
rand = { version = "0.9.2", default-features = false }
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.47.1", default-features = false, features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.27.0", default-features = false, features = ["__rustls-tls", "connect", "rustls", "rustls-tls-native-roots", "rustls-tls-webpki-roots", "tokio-rustls"] }
tungstenite = { version = "0.27.0", default-features = false, features = ["__rustls-tls"] }
twitch_api = { version = "0.7.2", default-features = false, features = ["client", "eventsub", "helix", "reqwest"] }

[lints.clippy]
all = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

# RESTRICTIONS
alloc_instead_of_core = "warn"
as_pointer_underscore = "warn"
as_underscore = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
create_dir = "warn"
dbg_macro = "warn"
decimal_literal_representation = "warn"
default_union_representation = "warn"
disallowed_script_idents = "warn"
else_if_without_else = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
error_impl_error = "warn"
exit = "warn"
field_scoped_visibility_modifiers = "warn"
filetype_is_file = "warn"
float_cmp_const = "warn"
fn_to_numeric_cast_any = "warn"
get_unwrap = "warn"
host_endian_bytes = "warn"
if_then_some_else_none = "warn"
impl_trait_in_params = "warn"
infinite_loop = "warn"
iter_over_hash_type = "warn"
let_underscore_must_use = "warn"
map_err_ignore = "warn"
map_with_unused_argument_over_ranges = "warn"
missing_assert_message = "warn"
missing_asserts_for_indexing = "warn"
mixed_read_write_in_expression = "warn"
mod_module_files = "warn"
multiple_inherent_impl = "warn"
non_zero_suggestions = "warn"
panic = "warn"
pathbuf_init_then_push = "warn"
precedence_bits = "warn"
print_stderr = "warn"
print_stdout = "warn"
pub_use = "warn"
redundant_type_annotations = "warn"
ref_patterns = "warn"
renamed_function_params = "warn"
std_instead_of_alloc = "warn"
std_instead_of_core = "warn"
str_to_string = "warn"
string_add = "warn"
string_lit_chars_any = "warn"
string_slice = "warn"
string_to_string = "warn"
todo = "warn"
try_err = "warn"
unneeded_field_pattern = "warn"
unused_trait_names = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"
use_debug = "warn"
separated_literal_suffix = "warn"
